--- a/rpisurvcam/survcam/templates/survcam/base.html
+++ b/rpisurvcam/survcam/templates/survcam/base.html
@@ -5,10 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Raspberry Pi Camera Stream</title>
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" media="screen">  
-    <link href="font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="survcam.css" rel="stylesheet" type="text/css">
-  </head><body>
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" media="screen">
+    <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/bootstrap-slider.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/survcam.css' %}" rel="stylesheet" type="text/css">
+  </head>
+  <body>
     <div class="navbar navbar-default navbar-static-top">
       <div class="container">
         <div class="navbar-header">
@@ -18,7 +20,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><span>Survaillance Camera</span></a>
+          <a class="navbar-brand" href="#"><span>Surveillance Camera</span></a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-ex-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -35,8 +37,6 @@
         </div>
       </div>
     </div>
-    <script src="{% static 'js/jquery-2.2.0.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <div class="section">
       <div class="container">
         <div class="row ">
@@ -50,12 +50,15 @@
           </div>
           <div class="col-md-10">
             <div class="container-fluid">
-            {% block body_block %}{% endblock body_block %}
+              {% block body_block %}{% endblock body_block %}
             </div>
           </div>
         </div>
       </div>
     </div>
-  
-
-</body></html>
+  </body>
+  <script src="{% static 'js/jquery-2.2.0.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap-slider.min.js' %}"></script>
+  <script src="{% static 'js/survcam.js' %}"></script>
+</html>
