Adding basic on-demand snapshot functionality.

--- a/rpisurvcam/survcam/templates/survcam/stream.html
+++ b/rpisurvcam/survcam/templates/survcam/stream.html
@@ -9,8 +9,8 @@
     </div>
   </div>
   <div class="col-md-2">
-      <input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="-90" data-slider-max="90" data-slider-step="1" data-slider-value="0"
-             data-slider-orientation="vertical"/>
+    <input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="-90" data-slider-max="90" data-slider-step="1" data-slider-value="0"
+             data-slider-orientation="vertical" />
   </div>
   <div class="col-md-4">
     <h3>Camera Details</h3>
@@ -34,7 +34,20 @@
 </div>
 <div class="row">
   <div class="col-md-6 text-center">
-    <input id="ex2" data-slider-id='ex2Slider' type="text" data-slider-min="-90" data-slider-max="90" data-slider-step="1" data-slider-value="0"/>
+    <input id="ex2" data-slider-id="ex2Slider" type="text" data-slider-min="-90"
+                data-slider-max="90" data-slider-step="1" data-slider-value="0" />
+  </div>
+  <div class="col-md-6"></div>
+</div>
+<div class="row" style="padding-top: 20px">
+  <div class="col-md-6 text-center">
+    <div class="btn-group" role="group">
+      <a href="snapshot" class="btn btn-default" type="button">
+	<span class="glyphicon glyphicon-camera" aria-hidden="true"></span>
+	&nbsp;Take snapshot
+      </a>
+      <!--<button class="btn btn-default" type="button">Something else</button>-->
+    </div>
   </div>
 </div>
 <div class="row">
