Adding event Dropbox functions and filtering

--- a/rpisurvcam/templates/events/events.html
+++ b/rpisurvcam/templates/events/events.html
@@ -2,25 +2,21 @@
 {% load static %}
 {% block body_block %}
 <h2>All Events</h2>
-<ul class="media-list">
-    {% for event in events %}
-  <li class="media">
- <a class="pull-left" href="#"><img class="media-object" src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" height="48" width="48"></a>
-    <div class="media-body">
-      <h4 class="media-heading">
-        <small>{{ event.time }}&nbsp;&nbsp;</small>{{ event.description }}
-        <small>
-          {% if event.status == 0 %}
-          <span class="label label-success">&nbsp;&nbsp;Success
-            {% elif event.status == 2 %}
-            <span class="label label-danger">&nbsp;&nbsp;System Error
-              {% elif event.status == 3 %}
-              <span class="label label-info">&nbsp;&nbsp;Info
-                {% endif %}
-        &nbsp;&nbsp;</span></small>
-      </h4>
-    </div>
-  </li>
-  {% endfor %}
+<ul class="nav nav-tabs">
+  <li role="presentation" class="active"><a href="#home" aria-controls="all" role="tab" data-toggle="tab">All</a></li>
+  <li role="presentation"><a href="#motion" aria-controls="motion" role="tab" data-toggle="tab">Motion</a></li>
+  <li role="presentation"><a href="#system" aria-controls="system" role="tab" data-toggle="tab">System</a></li>
 </ul>
+
+<div class="tab-content">
+  <div role="tabpanel" class="tab-pane active" id="home">
+  {% include "events/events_contents.html" with events=all_events %}
+  </div>
+  <div role="tabpanel" class="tab-pane" id="motion">
+  {% include "events/events_contents.html" with events=motion_events %}
+  </div>
+  <div role="tabpanel" class="tab-pane" id="system">
+  {% include "events/events_contents.html" with events=system_events %}
+  </div>
+</div>
 {% endblock %}
