Returning servo target to frontent user (second & last step)

--- a/rpisurvcam/templates/survcam/stream.html
+++ b/rpisurvcam/templates/survcam/stream.html
@@ -9,7 +9,7 @@
     </div>
   </div>
   <div class="col-md-2">
-      <input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="-90" data-slider-max="90" data-slider-step="1" data-slider-value="0" data-slider-orientation="vertical"/>
+      <input id="tiltSlider" data-slider-id='tiltSliderId' type="text" data-slider-min="-90" data-slider-max="90" data-slider-step="1" data-slider-value="0" data-slider-orientation="vertical"/>
   </div>
   <div class="col-md-4">
     <h3>Camera Details</h3>
@@ -33,7 +33,7 @@
 </div>
 <div class="row">
   <div class="col-md-6 text-center">
-    <input id="ex2" data-slider-id="ex2Slider" type="text" data-slider-min="-90"
+    <input id="panSlider" data-slider-id="panSliderId" type="text" data-slider-min="-90"
                 data-slider-max="90" data-slider-step="1" data-slider-value="0" />
   </div>
   <div class="col-md-6"></div>
