--- a/rpisurvcam/static/css/survcam.less
+++ b/rpisurvcam/static/css/survcam.less
@@ -1,14 +1,14 @@
 /*!
- * Default theme for Pingendo 
- * Homepage: http://pingendo.com  
- * Copyright 2015 Pingendo 
- * Licensed under MIT 
+ * Default theme for Pingendo
+ * Homepage: http://pingendo.com
+ * Copyright 2015 Pingendo
+ * Licensed under MIT
  * Based on Bootstrap v3.3.4
 */
 
 
-/* Add custom CSS classes here 
- * 
+/* Add custom CSS classes here
+ *
  * img {
  *   box-shadow : 0px 0px 10px black !important;
  * }
@@ -23,7 +23,16 @@
 /*}*/
 
 .slider-selection {
-        background: #BABABA;
+	background: #BABABA;
+}
+
+#stream-col {
+	width: 800px;
+	height: 600px;
+}
+
+.event-list-item {
+  padding-top: 4px;
 }
 
 //
@@ -743,4 +752,3 @@ monospace;
 @import "https://raw.githubusercontent.com/Pingendo/pingendo-bootstrap/gh-pages/less/pingendo-custom.less";
 
 /* PINGENDO COMMENT DO NOT REMOVE */
-
