--- a/rpisurvcam/templates/survcam/stream.html
+++ b/rpisurvcam/templates/survcam/stream.html
@@ -2,16 +2,27 @@
 {% load static %}
 {% block body_block %}
 
-<div class="row-fluid">
-  <div class="col-md-6">
-    <div class="well">
-      <img src="{% static 'house-03.jpg' %}" class="img-responsive">
+<div class="row">
+  <div class="col-sm-8">
+    <div class="row">
+      <div class="col-xs-10 col-sm-11" id="streamCol">
+        <div class="well">
+          <img src="{{ stream_url }}" class="stream-img img-responsive hidden-xs hidden-sm">
+          <a href="snapshot">
+            <img src="{{ stream_url }}" class="stream-img img-responsive hidden-md hidden-lg">
+          </a>
+        </div>
+      </div>
+      <div class="col-xs-2 col-sm-1" id="tiltSliderCol" style="height:185px;">
+        <div style="height:10%;"></div>
+        <input id="tiltSlider" data-slider-id='tiltSliderId' type="text" data-slider-min="-90" data-slider-max="90" data-slider-step="1" data-slider-value="0" data-slider-orientation="vertical" data-slider-tooltip-position="left" />
+      </div>
+      <div class="col-xs-10 col-sm-11 text-center">
+        <input id="panSlider" data-slider-id="panSliderId" type="text" data-slider-min="-90" data-slider-max="90" data-slider-step="1" data-slider-value="0" />
+      </div>
     </div>
   </div>
-  <div class="col-md-2">
-      <input id="tiltSlider" data-slider-id='tiltSliderId' type="text" data-slider-min="-90" data-slider-max="90" data-slider-step="1" data-slider-value="0" data-slider-orientation="vertical"/>
-  </div>
-  <div class="col-md-4">
+  <div class="col-sm-4">
     <h3>Camera Details</h3>
     <ul class="list-group">
       <li id="stream-status" class="list-group-item list-group-item-success">
@@ -29,23 +40,14 @@
       <li class="list-group-item">
         <strong>Last snapshot:&nbsp;</strong>21/04/16 14:32</li>
     </ul>
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-6 text-center">
-    <input id="panSlider" data-slider-id="panSliderId" type="text" data-slider-min="-90"
-                data-slider-max="90" data-slider-step="1" data-slider-value="0" />
-  </div>
-  <div class="col-md-6"></div>
-</div>
-<div class="row" style="padding-top: 20px">
-  <div class="col-md-6 text-center">
-    <div class="btn-group" role="group">
-      <a href="snapshot" class="btn btn-default" type="button">
-	<span class="glyphicon glyphicon-camera" aria-hidden="true"></span>
-	&nbsp;Take snapshot
-      </a>
-      <!--<button class="btn btn-default" type="button">Something else</button>-->
+    <div class="text-center hidden-xs hidden-sm">
+      <div class="btn-group" role="group">
+        <a href="snapshot" class="btn btn-default" type="button">
+           <span class="glyphicon glyphicon-camera" aria-hidden="true"></span>
+            &nbsp;Take snapshot
+        </a>
+        <!--<button class="btn btn-default" type="button">Something else</button>-->
+      </div>
     </div>
   </div>
 </div>
@@ -56,10 +58,8 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-5"></div>
-  <div class="col-md-2">
+  <div class="col-xs-12 text-center">
     <a href="/events">Show all events...</a>
   </div>
-  <div class="col-md-5"></div>
 </div>
 {% endblock %}
