Snapshot functionality fixed: - If stream is not available, a bad request response is returned (nothing happens) - If stream is available, the snapshot file is downloaded to client (some issue with mobile Chrome) - 'Take snapshot' button appears only on md/lg viewports, on xs/sm the button is the stream image itself - On xs/sm viewports an alert tells the user to tap the stream image to take a snapshot

--- a/rpisurvcam/static/css/survcam.css
+++ b/rpisurvcam/static/css/survcam.css
@@ -25,6 +25,11 @@
   width: 800px;
   height: 600px;
 }
+#tap-snapshot-alert {
+  position:absolute;
+  z-index:1;
+  width:70%;
+}
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
   font-family: sans-serif;
