--- a/rpisurvcam/templates/survcam/stream.html
+++ b/rpisurvcam/templates/survcam/stream.html
@@ -8,12 +8,15 @@
       <div class="col-xs-10 col-sm-11" id="streamCol">
         <div class="well">
           <img src="{{ stream_url }}" class="stream-img img-responsive hidden-xs hidden-sm">
-          <a href="snapshot">
+          <a class="snapshot-btn hidden-md hidden-lg">
+            <div id="tap-snapshot-alert" class="alert alert-info fade text-center">
+              <strong style="font-size: 20px;">Tap to take sanpshot</strong>
+            </div>
             <img src="{{ stream_url }}" class="stream-img img-responsive hidden-md hidden-lg">
           </a>
         </div>
       </div>
-      <div class="col-xs-2 col-sm-1" id="tiltSliderCol" style="height:185px;">
+      <div class="col-xs-2 col-sm-1" id="tiltSliderCol">
         <div style="height:10%;"></div>
         <input id="tiltSlider" data-slider-id='tiltSliderId' type="text" data-slider-min="-90" data-slider-max="90" data-slider-step="1" data-slider-value="0" data-slider-orientation="vertical" data-slider-tooltip-position="left" />
       </div>
@@ -42,7 +45,7 @@
     </ul>
     <div class="text-center hidden-xs hidden-sm">
       <div class="btn-group" role="group">
-        <a href="snapshot" class="btn btn-default" type="button">
+        <a class="btn btn-default snapshot-btn" type="button">
            <span class="glyphicon glyphicon-camera" aria-hidden="true"></span>
             &nbsp;Take snapshot
         </a>
