--- a/rpisurvcam/templates/survcam/stream.html
+++ b/rpisurvcam/templates/survcam/stream.html
@@ -56,7 +56,7 @@
 </div>
 <hr>
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-12" id="events-container">
     {% include "events/last_events.html" %}
   </div>
 </div>
