--- a/rpisurvcam/templates/base.html
+++ b/rpisurvcam/templates/base.html
@@ -50,6 +50,20 @@
       <div class="container">
         {% block body_block %}{% endblock body_block %}
       </div>
+      <div class="modal fade" id="modal" role="dialog">
+        <div class="modal-dialog">
+        <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title">Raspberry Pi Surveillance Camera</h4>
+            </div>
+            <div class="modal-body">
+            </div><div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
   <script src="{% static 'js/jquery-2.2.0.min.js' %}"></script>
