Adding uv4l settings link for staff.

--- a/rpisurvcam/templates/survcam/camera_status.html
+++ b/rpisurvcam/templates/survcam/camera_status.html
@@ -12,6 +12,9 @@
       <a href="#" class="text-danger pull-right">
         <span class="glyphicon glyphicon-off" id="camera-off"></span>
       </a>
+      <a href="{{ camera_details.control_url }}" target="_blank" class="text-muted pull-right">
+        <span class="glyphicon glyphicon-cog" id="camera-control"></span>
+      </a>
       {% else %}
       <a href="#" class="text-success pull-right">
         <span class="glyphicon glyphicon-off" id="camera-on"></span>
