--- a/rpisurvcam/static/css/survcam.css
+++ b/rpisurvcam/static/css/survcam.css
@@ -30,6 +30,10 @@
   z-index:1;
   width:70%;
 }
+#camera-control, #camera-on, #camera-off {
+  font-size: 115%;
+  padding-right: 5px;
+}
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
   font-family: sans-serif;
