Camera on/off button methods implemented This is done by calling a system command of 'start-stop-daemon' on motion. The 'start--stop-daemon' utility is used by Raspbian by default to manage daemon processes. To allow access to this system command from the Django view, the motion daemon process is should be started using the 'pi' user. This requires to change the default motion startup script located at /etc/init.d/motion: 	Look for '--chuid motion' and replace with '--chuid pi'.

--- a/rpisurvcam/templates/survcam/camera_status.html
+++ b/rpisurvcam/templates/survcam/camera_status.html
@@ -9,14 +9,14 @@
     {% if request.user.is_staff %}
     <strong>
       {% if stream_active %}
-      <a href="#" class="text-danger pull-right">
+      <a href="{% url 'camera_off' %}" class="text-danger pull-right">
         <span class="glyphicon glyphicon-off" id="camera-off"></span>
       </a>
       <a href="{{ camera_details.control_url }}" target="_blank" class="text-muted pull-right">
         <span class="glyphicon glyphicon-cog" id="camera-control"></span>
       </a>
       {% else %}
-      <a href="#" class="text-success pull-right">
+      <a href="{% url 'camera_on' %}" class="text-success pull-right">
         <span class="glyphicon glyphicon-off" id="camera-on"></span>
       </a>
       {% endif %}
