Dropbox integration fix - adding actual URL to captured videos directory: 1. New settings in local settings file (platform_settings.py):    - DROPBOX_VIDEOS_URL    - DROPBOX_IMAGES_URL    These will be used by the web application to give access to the Dropbox directories. 2. Added dropbox/setup.py script that the admin should run after setting up the dropbox_uploader script.    This script creates the videos and images directories in the Dropbox account,    gets their shared url, and updates the local settings file with the urls. 3. New context processor in survcam app - it easily lets the base template access    to the 'DROPBOX_*_URL' settings, no matter from which view it was rendered. 4. Added the new context processor to settings.py, and the Dropbox videos url to the base template.

--- a/rpisurvcam/templates/base.html
+++ b/rpisurvcam/templates/base.html
@@ -25,7 +25,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-ex-collapse">
 	  <ul class="nav navbar-nav">
-	    <li><a href="https://www.dropbox.com/sh/htkuxa6hvjz840y/AACL9bNPn6EY6wDtlC70HEs7a?dl=0" target="_blank">Captured videos</a></li>
+	    <li><a href="{{ DROPBOX_VIDEOS_URL }}" target="_blank">Captured videos</a></li>
 	    <li><a href="/">Scheduled tasks</a></li>
 	    <li><a href="{% url 'events' %}">Events</a></li>
 	  </ul>
