New motion detection handling (events and Dropbox): 1. Motion video creation triggers a new script: new_motion_video.py. 2. The script expects 1 command line argument - the file path of the new video.    It sends a task of type 'new_motion_detected' with the file path as an argument to Celery's queue. 3. The new task does the following:    1. Add "Motion detected" event to let web app users know motion was detected.       - The event includes a URL to a new type of view: download_motion,         which lets the user download the video directly from the RPi.    2. Upload the motion video to Dropbox.    3. Get the remote video's shared URL and create a "Video uploaded" event with the URL.    4. Remove the option to download the video directly from the "Motion detected" event.    5. Delete the video from the RPi (from Motion's target_dir).
Notes:
1. The new_motion_detected.py script can be placed anywhere, but motion.conf's on_movie_end should point to it.
2. A "Dropbox" event class was added.
3. Some of the event labels where changed.
4. The 'upload_motion_to_dropbox' task is now redundant as the videos are uploaded immediately after being created.
   It can be still used if the admin prefers to use it, but motion.conf's on_movie_end should be commented out.
5. If using the new way of uploading videos (with 'new_motion_detected' task),
   the Celery worker can have concurrency! (but it's still better to limit it).

--- a/rpisurvcam/templates/events/events.html
+++ b/rpisurvcam/templates/events/events.html
@@ -6,6 +6,7 @@
   <li role="presentation" class="active"><a href="#home" aria-controls="all" role="tab" data-toggle="tab">All</a></li>
   <li role="presentation"><a href="#motion" aria-controls="motion" role="tab" data-toggle="tab">Motion</a></li>
   <li role="presentation"><a href="#system" aria-controls="system" role="tab" data-toggle="tab">System</a></li>
+  <li role="presentation"><a href="#dropbox" aria-controls="dropbox" role="tab" data-toggle="tab">Dropbox</a></li>
 </ul>
 
 <div class="tab-content">
@@ -17,6 +18,9 @@
   </div>
   <div role="tabpanel" class="tab-pane" id="system">
   {% include "events/events_contents.html" with events=system_events %}
+  </div>
+  <div role="tabpanel" class="tab-pane" id="dropbox">
+  {% include "events/events_contents.html" with events=dropbox_events %}
   </div>
 </div>
 {% endblock %}
