--- a/rpisurvcam/templates/events/events_contents.html
+++ b/rpisurvcam/templates/events/events_contents.html
@@ -15,6 +15,8 @@
           {% endif %}
           {% if event.status == 0 %}
             <span class="label label-success">&nbsp;&nbsp;Success
+          {% elif event.status == 1 %}
+            <span class="label label-danger">&nbsp;&nbsp;Failure
           {% elif event.status == 2 %}
             <span class="label label-danger">&nbsp;&nbsp;System Error
           {% elif event.status == 3 %}
